--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
   <div class="modal">
     <button class="modal-close-btn">
       <svg class="modal-close-btn-icon" width="8" height="8" aria-label="close modal icon">
-        <use href="./icons.svg#icon-close">
+        <use href="./images/icons.svg#icon-close">
         </use>
       </svg>
     </button>
@@ -490,7 +490,7 @@
           required
           >
           <svg class="review-form-input-icon" width="18" height="24" aria-label="icon user">
-            <use href="./icons.svg#icon-person">
+            <use href="./images/icons.svg#icon-person">
             </use>
           </svg>
         </div>
@@ -508,7 +508,7 @@
           title="xxx-xxx-xx-xx"
           required>
           <svg class="review-form-input-icon" width="18" height="24" aria-label="icon phone">
-            <use href="./icons.svg#icon-phone">
+            <use href="./images/icons.svg#icon-phone">
             </use>
           </svg>
         </div>
@@ -524,7 +524,7 @@
           name="user-email"
           required>
           <svg class="review-form-input-icon" width="18" height="24" aria-label="icon email">
-            <use href="./icons.svg#icon-email">
+            <use href="../images/icons.svg#icon-email">
             </use>
           </svg>
         </div>
@@ -542,13 +542,19 @@
       </div>
       <div class="review-form-checkbox-wrappper">
         <input
-         class="review-form-checkbox"
+         class="review-form-checkbox visually-hidden"
          id="user-privacy-policy"
          name="user-privacy-policy"
          type="checkbox"
          value="true"
          required>
         <label class="review-form-checkbox-label" for="user-privacy-policy" >
+          <span class="review-form-own-checkbox">
+            <svg class="review-form-own-icon" width="16" height="16" aria-label="icon checkbox click">
+              <use href="../images/icons.svg#icon-click">
+              </use>
+            </svg>
+          </span>
           I accept the terms and conditions of th <a href="#">Privacy Policy</a> 
         </label>
       </div>
