--- a/index.html
+++ b/index.html
@@ -555,7 +555,8 @@
               </use>
             </svg>
           </span>
-          I accept the terms and conditions of th <a href="#">Privacy Policy</a> 
+          I accept the terms and conditions of the 
+          <a href="#"> Privacy Policy</a> 
         </label>
       </div>
       <button class="review-form-submit-btn" type="submit">Send</button>
