--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
   </footer>
 <div class="backdrop ">
   <div class="modal">
-    <button class="modal-close-btn">
+    <button class="modal-close-btn" type="button">
       <svg class="modal-close-btn-icon" width="8" height="8" aria-label="close modal icon">
         <use href="./images/icons.svg#icon-close">
         </use>
