--- a/index.html
+++ b/index.html
@@ -453,17 +453,22 @@
       <div class="footer-email-form-wrapper">
         <p class="footer-email-form-text">Subscribe</p>
         <form class="footer-email-form" >
-          <label for="user-subscribe-email"></label>
-          <input 
-          class="footer-email-input"
-          type="email"
-           id="user-subscribe-email" 
-           name="user-subscribe-email"
-           placeholder="E-mail">
+          <label 
+           class="footer-email-label">
+            <input 
+              class="footer-email-input"
+              type="email"
+              id="user-subscribe-email" 
+              name="user-subscribe-email"
+              placeholder="E-mail"
+            >
+          </label>
+          
           
           <button
-          class="footer-submit-btn"
-           type="submit">Subscribe
+           class="footer-submit-btn"
+           type="submit">
+           Subscribe
             <svg class="footer-input-btn-icon" width="24" height="24" aria-label="linkedin">
               <use href="./images/icons.svg#icon-telegram">
               </use>
