--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     </div>
 
   </footer>
-<div class="backdrop ">
+<div class="backdrop is-open">
   <div class="modal">
     <button class="modal-close-btn" type="button">
       <svg class="modal-close-btn-icon" width="8" height="8" aria-label="close modal icon">
@@ -542,7 +542,7 @@
         </div>
        
       </div>
-      <div class="review-form-field-wrapper">
+      <div class="review-form-textarea-wrapper">
         <label class="review-form-field-label" for="user-comment" >Comment</label>
        <textarea 
           class="review-form-comment"
@@ -555,14 +555,14 @@
       <div class="review-form-checkbox-wrappper">
         <input
          class="review-form-checkbox visually-hidden"
-         id="user-privacy-policy"
-         name="user-privacy-policy"
+         id="user-privacy"
+         name="user-privacy"
          type="checkbox"
          value="true"
          required>
-        <label class="review-form-checkbox-label" for="user-privacy-policy" >
+        <label class="review-form-checkbox-label" for="user-privacy" >
           <span class="review-form-own-checkbox">
-            <svg class="review-form-own-icon" width="16" height="16" aria-label="icon checkbox click">
+            <svg class="review-form-own-icon" width="10" height="8" aria-label="icon checkbox click">
               <use href="../images/icons.svg#icon-click">
               </use>
             </svg>
