--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
     </div>
 
   </footer>
-<div class="backdrop">
+<div class="backdrop is-open">
   <div class="modal">
     <button class="modal-close-btn" type="button">
       <svg class="modal-close-btn-icon" width="8" height="8" aria-label="close modal icon">
@@ -536,7 +536,7 @@
           name="user-email"
           required>
           <svg class="review-form-input-icon" width="18" height="24" aria-label="icon email">
-            <use href="../images/icons.svg#icon-email">
+            <use href="./images/icons.svg#icon-email">
             </use>
           </svg>
         </div>
@@ -563,7 +563,7 @@
         <label class="review-form-checkbox-label" for="user-privacy" >
           <span class="review-form-own-checkbox">
             <svg class="review-form-own-icon" width="10" height="8" aria-label="icon checkbox click">
-              <use href="../images/icons.svg#icon-click">
+              <use href="./images/icons.svg#icon-click">
               </use>
             </svg>
           </span>
