--- a/index.html
+++ b/index.html
@@ -568,7 +568,11 @@
             </svg>
           </span>
           I accept the terms and conditions of the 
-          <a href="#"> Privacy Policy</a> 
+          <a 
+           class="review-form-checkbox-link"
+           href="#">
+           Privacy Policy
+          </a> 
         </label>
       </div>
       <button class="review-form-submit-btn" type="submit">Send</button>
